// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`3id get 3ID using IdentityWallet claim signing should sign jwts correctly with rootDID 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly#signingKey",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly",
    "publicKey": Array [
      Object {
        "id": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly#signingKey",
        "publicKeyHex": "042dec3aabcbe632644e7251fb0124493233e70caf427c2ba229e977b4c317de6fc55e6061bc0091213c18cd0afb67a9f67fc9d87f1e24d2bf180606442a43038b",
        "type": "Secp256k1VerificationKey2018",
      },
      Object {
        "id": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly#encryptionKey",
        "publicKeyBase64": "U6UYbPZs+t9WOjCHIAaFCzEM8+U4JZ+LssEO/YNBXxE=",
        "type": "Curve25519EncryptionPublicKey",
      },
      Object {
        "ethereumAddress": "0x2D10ce5C50000496715891073804577E0Af964C0",
        "id": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly#managementKey",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOm51bGwsImRhdGEiOiJzb21lIGRhdGEiLCJpc3MiOiJkaWQ6MzpiYWZ5cmVpZmd3ZWdrems2cnhlbWZjazJ2Zm0yenB3MjIzaGtsMzdlcXZ0bXM2Z2R3dTJlam5ia3JseSJ9.09GTxgPRtf9vXW3woqrdWGZAQCvpW0ocBRXr6762cI5N_ZurKLGsKhEaUGDjSmHfTBeQDZN81S_JZswF3FF8fQ",
  "payload": Object {
    "data": "some data",
    "iat": null,
    "iss": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly",
  },
  "signer": Object {
    "id": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly#signingKey",
    "publicKeyHex": "042dec3aabcbe632644e7251fb0124493233e70caf427c2ba229e977b4c317de6fc55e6061bc0091213c18cd0afb67a9f67fc9d87f1e24d2bf180606442a43038b",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`3id get 3ID using IdentityWallet claim signing should sign jwts correctly with subDID 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:3:bafyreid2pa73cf67gxii4qb3xdyw6mef7enq262mzg7nebwheqyum5nfoi#subSigningKey",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:3:bafyreid2pa73cf67gxii4qb3xdyw6mef7enq262mzg7nebwheqyum5nfoi",
    "proof": Object {
      "alg": "ES256K",
      "signature": "W5OpzAu5gy5FgKrkq_KS2Y7dlHGrLDn-dg73nHmN7rMVA6nP_4zzXPivUMCKgG3b9bylrREtZM4XpAlXJvXQXA",
    },
    "publicKey": Array [
      Object {
        "id": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly#signingKey",
        "publicKeyHex": "042dec3aabcbe632644e7251fb0124493233e70caf427c2ba229e977b4c317de6fc55e6061bc0091213c18cd0afb67a9f67fc9d87f1e24d2bf180606442a43038b",
        "type": "Secp256k1VerificationKey2018",
      },
      Object {
        "id": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly#encryptionKey",
        "publicKeyBase64": "U6UYbPZs+t9WOjCHIAaFCzEM8+U4JZ+LssEO/YNBXxE=",
        "type": "Curve25519EncryptionPublicKey",
      },
      Object {
        "ethereumAddress": "0x2D10ce5C50000496715891073804577E0Af964C0",
        "id": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly#managementKey",
        "type": "Secp256k1VerificationKey2018",
      },
      Object {
        "id": "did:3:bafyreid2pa73cf67gxii4qb3xdyw6mef7enq262mzg7nebwheqyum5nfoi#subSigningKey",
        "publicKeyHex": "04db9c88d0202a2d2539ef88978609fb5c198cbf620a06a68ab3b4cdb6efbee62dcb970716398cded19d31f4d3f29d92354c882f5ac89f00f3ec8be2b4ff71f0a3",
        "type": "Secp256k1VerificationKey2018",
      },
      Object {
        "id": "did:3:bafyreid2pa73cf67gxii4qb3xdyw6mef7enq262mzg7nebwheqyum5nfoi#subEncryptionKey",
        "publicKeyBase64": "43OpI6iE3LSNhaN1r6YWEQWhjF1LpAD7rMUUZHl3/V0=",
        "type": "Curve25519EncryptionPublicKey",
      },
    ],
    "root": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly",
    "space": "space1",
  },
  "issuer": "did:3:bafyreid2pa73cf67gxii4qb3xdyw6mef7enq262mzg7nebwheqyum5nfoi",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOm51bGwsImRhdGEiOiJzb21lIGRhdGEiLCJpc3MiOiJkaWQ6MzpiYWZ5cmVpZDJwYTczY2Y2N2d4aWk0cWIzeGR5dzZtZWY3ZW5xMjYybXpnN25lYndoZXF5dW01bmZvaSJ9.W1ktZ3JePY1fqURAz5cbbc0u6Sq0dnXncieti4FfhA-nCSL-UwnbWAlagozWcYHcNtjc3jMAYkk1NPvjQLtKVA",
  "payload": Object {
    "data": "some data",
    "iat": null,
    "iss": "did:3:bafyreid2pa73cf67gxii4qb3xdyw6mef7enq262mzg7nebwheqyum5nfoi",
  },
  "signer": Object {
    "id": "did:3:bafyreid2pa73cf67gxii4qb3xdyw6mef7enq262mzg7nebwheqyum5nfoi#subSigningKey",
    "publicKeyHex": "04db9c88d0202a2d2539ef88978609fb5c198cbf620a06a68ab3b4cdb6efbee62dcb970716398cded19d31f4d3f29d92354c882f5ac89f00f3ec8be2b4ff71f0a3",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`3id get 3ID using IdentityWallet instantiate threeId with IdentityWallet 1`] = `"did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly"`;

exports[`3id get 3ID using IdentityWallet instantiate threeId with IdentityWallet 2`] = `
Object {
  "asymEncryptionKey": "U6UYbPZs+t9WOjCHIAaFCzEM8+U4JZ+LssEO/YNBXxE=",
  "managementKey": "0x2D10ce5C50000496715891073804577E0Af964C0",
  "signingKey": "032dec3aabcbe632644e7251fb0124493233e70caf427c2ba229e977b4c317de6f",
}
`;

exports[`3id get 3ID using IdentityWallet instantiate threeId with IdentityWallet 3`] = `
Object {
  "asymEncryptionKey": "U6UYbPZs+t9WOjCHIAaFCzEM8+U4JZ+LssEO/YNBXxE=",
  "managementKey": "0x2D10ce5C50000496715891073804577E0Af964C0",
  "signingKey": "042dec3aabcbe632644e7251fb0124493233e70caf427c2ba229e977b4c317de6fc55e6061bc0091213c18cd0afb67a9f67fc9d87f1e24d2bf180606442a43038b",
}
`;

exports[`3id get 3ID using IdentityWallet instantiate threeId with IdentityWallet 4`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly#signingKey",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly",
  "publicKey": Array [
    Object {
      "id": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly#signingKey",
      "publicKeyHex": "042dec3aabcbe632644e7251fb0124493233e70caf427c2ba229e977b4c317de6fc55e6061bc0091213c18cd0afb67a9f67fc9d87f1e24d2bf180606442a43038b",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly#encryptionKey",
      "publicKeyBase64": "U6UYbPZs+t9WOjCHIAaFCzEM8+U4JZ+LssEO/YNBXxE=",
      "type": "Curve25519EncryptionPublicKey",
    },
    Object {
      "ethereumAddress": "0x2D10ce5C50000496715891073804577E0Af964C0",
      "id": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly#managementKey",
      "type": "Secp256k1VerificationKey2018",
    },
  ],
}
`;

exports[`3id get 3ID using IdentityWallet keyring logic should encrypt and decrypt asymmetrically correctly 1`] = `[Error: IdentityWallet: Could not decrypt message]`;

exports[`3id get 3ID using IdentityWallet keyring logic should encrypt and decrypt correctly 1`] = `[Error: IdentityWallet: Could not decrypt message]`;

exports[`3id get 3ID using IdentityWallet keyring logic should get public keys correctly 1`] = `
Object {
  "asymEncryptionKey": "U6UYbPZs+t9WOjCHIAaFCzEM8+U4JZ+LssEO/YNBXxE=",
  "managementKey": "0x2D10ce5C50000496715891073804577E0Af964C0",
  "signingKey": "032dec3aabcbe632644e7251fb0124493233e70caf427c2ba229e977b4c317de6f",
}
`;

exports[`3id get 3ID using IdentityWallet keyring logic should get public keys correctly 2`] = `
Object {
  "asymEncryptionKey": "43OpI6iE3LSNhaN1r6YWEQWhjF1LpAD7rMUUZHl3/V0=",
  "managementKey": null,
  "signingKey": "04db9c88d0202a2d2539ef88978609fb5c198cbf620a06a68ab3b4cdb6efbee62dcb970716398cded19d31f4d3f29d92354c882f5ac89f00f3ec8be2b4ff71f0a3",
}
`;

exports[`3id get 3ID using IdentityWallet keyring logic should get public keys correctly 3`] = `
Object {
  "asymEncryptionKey": "U6UYbPZs+t9WOjCHIAaFCzEM8+U4JZ+LssEO/YNBXxE=",
  "managementKey": "0x2D10ce5C50000496715891073804577E0Af964C0",
  "signingKey": "042dec3aabcbe632644e7251fb0124493233e70caf427c2ba229e977b4c317de6fc55e6061bc0091213c18cd0afb67a9f67fc9d87f1e24d2bf180606442a43038b",
}
`;

exports[`3id get 3ID using IdentityWallet keyring logic should get public keys correctly 4`] = `
Object {
  "asymEncryptionKey": "43OpI6iE3LSNhaN1r6YWEQWhjF1LpAD7rMUUZHl3/V0=",
  "managementKey": null,
  "signingKey": "04db9c88d0202a2d2539ef88978609fb5c198cbf620a06a68ab3b4cdb6efbee62dcb970716398cded19d31f4d3f29d92354c882f5ac89f00f3ec8be2b4ff71f0a3",
}
`;

exports[`3id get 3ID using IdentityWallet keyring logic should hashDBKey correctly 1`] = `"124039353564383561613461336166303636393362653637393131663134636463636634393131363534313662626462366433373839366365636339323532653939"`;

exports[`3id get 3ID using IdentityWallet keyring logic should hashDBKey correctly 2`] = `"124032393236383765643933363365616464643434393632396538346632323633653165383964376362663332366437386636356134663761646639653935616264"`;

exports[`3id get 3ID using IdentityWallet keyring logic should init space keyrings correctly 1`] = `"did:3:bafyreid2pa73cf67gxii4qb3xdyw6mef7enq262mzg7nebwheqyum5nfoi"`;

exports[`3id get 3ID using IdentityWallet keyring logic should init space keyrings correctly 2`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:bafyreid2pa73cf67gxii4qb3xdyw6mef7enq262mzg7nebwheqyum5nfoi#subSigningKey",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:bafyreid2pa73cf67gxii4qb3xdyw6mef7enq262mzg7nebwheqyum5nfoi",
  "proof": Object {
    "alg": "ES256K",
    "signature": "W5OpzAu5gy5FgKrkq_KS2Y7dlHGrLDn-dg73nHmN7rMVA6nP_4zzXPivUMCKgG3b9bylrREtZM4XpAlXJvXQXA",
  },
  "publicKey": Array [
    Object {
      "id": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly#signingKey",
      "publicKeyHex": "042dec3aabcbe632644e7251fb0124493233e70caf427c2ba229e977b4c317de6fc55e6061bc0091213c18cd0afb67a9f67fc9d87f1e24d2bf180606442a43038b",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly#encryptionKey",
      "publicKeyBase64": "U6UYbPZs+t9WOjCHIAaFCzEM8+U4JZ+LssEO/YNBXxE=",
      "type": "Curve25519EncryptionPublicKey",
    },
    Object {
      "ethereumAddress": "0x2D10ce5C50000496715891073804577E0Af964C0",
      "id": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly#managementKey",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreid2pa73cf67gxii4qb3xdyw6mef7enq262mzg7nebwheqyum5nfoi#subSigningKey",
      "publicKeyHex": "04db9c88d0202a2d2539ef88978609fb5c198cbf620a06a68ab3b4cdb6efbee62dcb970716398cded19d31f4d3f29d92354c882f5ac89f00f3ec8be2b4ff71f0a3",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreid2pa73cf67gxii4qb3xdyw6mef7enq262mzg7nebwheqyum5nfoi#subEncryptionKey",
      "publicKeyBase64": "43OpI6iE3LSNhaN1r6YWEQWhjF1LpAD7rMUUZHl3/V0=",
      "type": "Curve25519EncryptionPublicKey",
    },
  ],
  "root": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly",
  "space": "space1",
}
`;

exports[`3id get 3ID using IdentityWallet keyring logic should init space keyrings correctly 3`] = `"did:3:bafyreidfhxbxlygsak5amqlktutzu6swvki5fumpbf72ny5hm5ig5fq4re"`;

exports[`3id get 3ID using IdentityWallet keyring logic should init space keyrings correctly 4`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:bafyreidfhxbxlygsak5amqlktutzu6swvki5fumpbf72ny5hm5ig5fq4re#subSigningKey",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:bafyreidfhxbxlygsak5amqlktutzu6swvki5fumpbf72ny5hm5ig5fq4re",
  "proof": Object {
    "alg": "ES256K",
    "signature": "jDDIpI8vn-VkzjNMYU27-EWiA9J5vx-yGqmd0i4m5oXwo0qg76SgmDi0thidsgdVslNHrqJapp6hrupaf-4d2w",
  },
  "publicKey": Array [
    Object {
      "id": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly#signingKey",
      "publicKeyHex": "042dec3aabcbe632644e7251fb0124493233e70caf427c2ba229e977b4c317de6fc55e6061bc0091213c18cd0afb67a9f67fc9d87f1e24d2bf180606442a43038b",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly#encryptionKey",
      "publicKeyBase64": "U6UYbPZs+t9WOjCHIAaFCzEM8+U4JZ+LssEO/YNBXxE=",
      "type": "Curve25519EncryptionPublicKey",
    },
    Object {
      "ethereumAddress": "0x2D10ce5C50000496715891073804577E0Af964C0",
      "id": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly#managementKey",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreidfhxbxlygsak5amqlktutzu6swvki5fumpbf72ny5hm5ig5fq4re#subSigningKey",
      "publicKeyHex": "047a494fb9681baa97d476d3d11d941c28510db24067896451ab3c78ad28a45ecc9dace481442e183eca38c3ac59003ff82f5c79504578b6030e41015fd84745ce",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreidfhxbxlygsak5amqlktutzu6swvki5fumpbf72ny5hm5ig5fq4re#subEncryptionKey",
      "publicKeyBase64": "6PPQJNXpQB7WTmcpC5OtL/yWxb9IKL9pqgppSgM+XQ4=",
      "type": "Curve25519EncryptionPublicKey",
    },
  ],
  "root": "did:3:bafyreifgwegkzk6rxemfck2vfm2zpw223hkl37eqvtms6gdwu2ejnbkrly",
  "space": "space2",
}
`;

exports[`3id getIdFromEthAddress claim signing should sign jwts correctly with rootDID 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#signingKey",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy",
    "publicKey": Array [
      Object {
        "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#signingKey",
        "publicKeyHex": "04e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e58883192ebba78d74641207e1d67a8451284f9f2315282311a3179e01e4f92b0676",
        "type": "Secp256k1VerificationKey2018",
      },
      Object {
        "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#encryptionKey",
        "publicKeyBase64": "gSXOO8r9n4Nz0qkJHwa9pSpK9qGzl6IsrP4bTd5c/3w=",
        "type": "Curve25519EncryptionPublicKey",
      },
      Object {
        "ethereumAddress": "0x12345",
        "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#managementKey",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOm51bGwsImRhdGEiOiJzb21lIGRhdGEiLCJpc3MiOiJkaWQ6MzpiYWZ5cmVpZnY2cHdmZDdiZWZzMjV3dWVreW9rZDNoaXFmNHhoNmE3NG12bnhocmNpdTI1bG0zc3V6eSJ9.PJ80TSj1qFOmP_rKCaMAzA-Q_SgCfi8OhpyCfOIuG9jR27Nk4_al6UefpaDZsFMGQDTrk-84DHok6RKE8kdh0A",
  "payload": Object {
    "data": "some data",
    "iat": null,
    "iss": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy",
  },
  "signer": Object {
    "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#signingKey",
    "publicKeyHex": "04e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e58883192ebba78d74641207e1d67a8451284f9f2315282311a3179e01e4f92b0676",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`3id getIdFromEthAddress claim signing should sign jwts correctly with subDID 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:3:bafyreig4qyx4p5kscxzextx6icfapqwhlryo64m6sfacy67jnuwnfyludy#subSigningKey",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:3:bafyreig4qyx4p5kscxzextx6icfapqwhlryo64m6sfacy67jnuwnfyludy",
    "proof": Object {
      "alg": "ES256K",
      "signature": "6ENPqmm0sZZiAYfxj3pLNV1CxmNepRfDXe92c-Gz_HerFnUlQ8qK8SfJ1kcpyjyr-vq7kLZ4t9I4E6_cd21ssw",
    },
    "publicKey": Array [
      Object {
        "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#signingKey",
        "publicKeyHex": "04e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e58883192ebba78d74641207e1d67a8451284f9f2315282311a3179e01e4f92b0676",
        "type": "Secp256k1VerificationKey2018",
      },
      Object {
        "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#encryptionKey",
        "publicKeyBase64": "gSXOO8r9n4Nz0qkJHwa9pSpK9qGzl6IsrP4bTd5c/3w=",
        "type": "Curve25519EncryptionPublicKey",
      },
      Object {
        "ethereumAddress": "0x12345",
        "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#managementKey",
        "type": "Secp256k1VerificationKey2018",
      },
      Object {
        "id": "did:3:bafyreig4qyx4p5kscxzextx6icfapqwhlryo64m6sfacy67jnuwnfyludy#subSigningKey",
        "publicKeyHex": "04a514c9de733883c7e264353988188dd815677af6d219068b540077a8eeaf5aad8ca93b512006fd50257347f849475dfe719acfc60256e40b5f4399dcc7350bbf",
        "type": "Secp256k1VerificationKey2018",
      },
      Object {
        "id": "did:3:bafyreig4qyx4p5kscxzextx6icfapqwhlryo64m6sfacy67jnuwnfyludy#subEncryptionKey",
        "publicKeyBase64": "zaPBNwm0qXFe9lUAqldGuhNdle6jbRtyUISoO+S3CBY=",
        "type": "Curve25519EncryptionPublicKey",
      },
    ],
    "root": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy",
    "space": "space1",
  },
  "issuer": "did:3:bafyreig4qyx4p5kscxzextx6icfapqwhlryo64m6sfacy67jnuwnfyludy",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOm51bGwsImRhdGEiOiJzb21lIGRhdGEiLCJpc3MiOiJkaWQ6MzpiYWZ5cmVpZzRxeXg0cDVrc2N4emV4dHg2aWNmYXBxd2hscnlvNjRtNnNmYWN5NjdqbnV3bmZ5bHVkeSJ9.4NtQXdg4FLH8_ZK8TFZKufiSGvo4PQXe-48-V_EVVSAtY8r5oXkpotgKS_fio5YfPiRQWXBbTrDqpAdCjl8bNQ",
  "payload": Object {
    "data": "some data",
    "iat": null,
    "iss": "did:3:bafyreig4qyx4p5kscxzextx6icfapqwhlryo64m6sfacy67jnuwnfyludy",
  },
  "signer": Object {
    "id": "did:3:bafyreig4qyx4p5kscxzextx6icfapqwhlryo64m6sfacy67jnuwnfyludy#subSigningKey",
    "publicKeyHex": "04a514c9de733883c7e264353988188dd815677af6d219068b540077a8eeaf5aad8ca93b512006fd50257347f849475dfe719acfc60256e40b5f4399dcc7350bbf",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`3id getIdFromEthAddress keyring logic should get public keys correctly 1`] = `
Object {
  "asymEncryptionKey": "gSXOO8r9n4Nz0qkJHwa9pSpK9qGzl6IsrP4bTd5c/3w=",
  "ethereumKey": "03097eb9e3569a8fd3f29e2265675a7cfab642059ad9ad547e40b8cc24d97b4208",
  "managementKey": "0x12345",
  "signingKey": "02e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e588",
}
`;

exports[`3id getIdFromEthAddress keyring logic should get public keys correctly 2`] = `
Object {
  "asymEncryptionKey": "zaPBNwm0qXFe9lUAqldGuhNdle6jbRtyUISoO+S3CBY=",
  "ethereumKey": "03298b45557685dbfbbffa6d1a5dbcc066b602542733d1054918b594872a7cffa0",
  "managementKey": "0x12345",
  "signingKey": "03a514c9de733883c7e264353988188dd815677af6d219068b540077a8eeaf5aad",
}
`;

exports[`3id getIdFromEthAddress keyring logic should get public keys correctly 3`] = `
Object {
  "asymEncryptionKey": "gSXOO8r9n4Nz0qkJHwa9pSpK9qGzl6IsrP4bTd5c/3w=",
  "ethereumKey": "04097eb9e3569a8fd3f29e2265675a7cfab642059ad9ad547e40b8cc24d97b42081976af28b7e74464692ccf949742376b84c2d06ce1de6d37bcc25c42770bbaf7",
  "managementKey": "0x12345",
  "signingKey": "04e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e58883192ebba78d74641207e1d67a8451284f9f2315282311a3179e01e4f92b0676",
}
`;

exports[`3id getIdFromEthAddress keyring logic should get public keys correctly 4`] = `
Object {
  "asymEncryptionKey": "zaPBNwm0qXFe9lUAqldGuhNdle6jbRtyUISoO+S3CBY=",
  "ethereumKey": "04298b45557685dbfbbffa6d1a5dbcc066b602542733d1054918b594872a7cffa0cd4b428c1d8b2615ab1b9bf3b23c20fa12203c01446d2d52ab5f766cd422ccd9",
  "managementKey": "0x12345",
  "signingKey": "04a514c9de733883c7e264353988188dd815677af6d219068b540077a8eeaf5aad8ca93b512006fd50257347f849475dfe719acfc60256e40b5f4399dcc7350bbf",
}
`;

exports[`3id getIdFromEthAddress keyring logic should hashDBKey correctly 1`] = `"b932fe7ab"`;

exports[`3id getIdFromEthAddress keyring logic should hashDBKey correctly 2`] = `"b932fe7ab"`;

exports[`3id getIdFromEthAddress keyring logic should init space keyrings correctly 1`] = `"did:3:bafyreig4qyx4p5kscxzextx6icfapqwhlryo64m6sfacy67jnuwnfyludy"`;

exports[`3id getIdFromEthAddress keyring logic should init space keyrings correctly 2`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:bafyreig4qyx4p5kscxzextx6icfapqwhlryo64m6sfacy67jnuwnfyludy#subSigningKey",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:bafyreig4qyx4p5kscxzextx6icfapqwhlryo64m6sfacy67jnuwnfyludy",
  "proof": Object {
    "alg": "ES256K",
    "signature": "6ENPqmm0sZZiAYfxj3pLNV1CxmNepRfDXe92c-Gz_HerFnUlQ8qK8SfJ1kcpyjyr-vq7kLZ4t9I4E6_cd21ssw",
  },
  "publicKey": Array [
    Object {
      "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#signingKey",
      "publicKeyHex": "04e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e58883192ebba78d74641207e1d67a8451284f9f2315282311a3179e01e4f92b0676",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#encryptionKey",
      "publicKeyBase64": "gSXOO8r9n4Nz0qkJHwa9pSpK9qGzl6IsrP4bTd5c/3w=",
      "type": "Curve25519EncryptionPublicKey",
    },
    Object {
      "ethereumAddress": "0x12345",
      "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#managementKey",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreig4qyx4p5kscxzextx6icfapqwhlryo64m6sfacy67jnuwnfyludy#subSigningKey",
      "publicKeyHex": "04a514c9de733883c7e264353988188dd815677af6d219068b540077a8eeaf5aad8ca93b512006fd50257347f849475dfe719acfc60256e40b5f4399dcc7350bbf",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreig4qyx4p5kscxzextx6icfapqwhlryo64m6sfacy67jnuwnfyludy#subEncryptionKey",
      "publicKeyBase64": "zaPBNwm0qXFe9lUAqldGuhNdle6jbRtyUISoO+S3CBY=",
      "type": "Curve25519EncryptionPublicKey",
    },
  ],
  "root": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy",
  "space": "space1",
}
`;

exports[`3id getIdFromEthAddress keyring logic should init space keyrings correctly 3`] = `"did:3:bafyreiah6tbfx36lacnw2ofx6pt2ibysggwbsc23dk23koiedm7dzvxzvu"`;

exports[`3id getIdFromEthAddress keyring logic should init space keyrings correctly 4`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:bafyreiah6tbfx36lacnw2ofx6pt2ibysggwbsc23dk23koiedm7dzvxzvu#subSigningKey",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:bafyreiah6tbfx36lacnw2ofx6pt2ibysggwbsc23dk23koiedm7dzvxzvu",
  "proof": Object {
    "alg": "ES256K",
    "signature": "a6k7ZxOgfgHSeApVYWpbHzKt7T2mQry5zTY1XSLWxetNatbhUFjln_uhstzLKm3mh0njUbT6HfpB5Y3eH_mlHw",
  },
  "publicKey": Array [
    Object {
      "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#signingKey",
      "publicKeyHex": "04e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e58883192ebba78d74641207e1d67a8451284f9f2315282311a3179e01e4f92b0676",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#encryptionKey",
      "publicKeyBase64": "gSXOO8r9n4Nz0qkJHwa9pSpK9qGzl6IsrP4bTd5c/3w=",
      "type": "Curve25519EncryptionPublicKey",
    },
    Object {
      "ethereumAddress": "0x12345",
      "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#managementKey",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreiah6tbfx36lacnw2ofx6pt2ibysggwbsc23dk23koiedm7dzvxzvu#subSigningKey",
      "publicKeyHex": "043903523a65f689ff52b216108a587b14282f654a48c6ba34f05378d077c48b2e9e541041ab80dc161cbb253e22bb4e86e1f891b92e909949aa5cca408c4e4885",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreiah6tbfx36lacnw2ofx6pt2ibysggwbsc23dk23koiedm7dzvxzvu#subEncryptionKey",
      "publicKeyBase64": "lL7nwPFH1ISLplkZb4uywfRTvHvbYdVx5WrIvHF7IDE=",
      "type": "Curve25519EncryptionPublicKey",
    },
  ],
  "root": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy",
  "space": "space2",
}
`;

exports[`3id getIdFromEthAddress should create a new identity on first call 1`] = `"did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy"`;

exports[`3id getIdFromEthAddress should create a new identity on first call 2`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#signingKey",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy",
  "publicKey": Array [
    Object {
      "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#signingKey",
      "publicKeyHex": "04e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e58883192ebba78d74641207e1d67a8451284f9f2315282311a3179e01e4f92b0676",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#encryptionKey",
      "publicKeyBase64": "gSXOO8r9n4Nz0qkJHwa9pSpK9qGzl6IsrP4bTd5c/3w=",
      "type": "Curve25519EncryptionPublicKey",
    },
    Object {
      "ethereumAddress": "0x12345",
      "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#managementKey",
      "type": "Secp256k1VerificationKey2018",
    },
  ],
}
`;

exports[`3id getIdFromEthAddress should create a new identity when passed a contentSignature 1`] = `"did:3:bafyreiacmttqrvqnlv5ig2zyxgwk2zyb2kmr5uymio6z2efmfmbmztowyq"`;

exports[`3id getIdFromEthAddress should create a new identity when passed a contentSignature 2`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:bafyreiacmttqrvqnlv5ig2zyxgwk2zyb2kmr5uymio6z2efmfmbmztowyq#signingKey",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:bafyreiacmttqrvqnlv5ig2zyxgwk2zyb2kmr5uymio6z2efmfmbmztowyq",
  "publicKey": Array [
    Object {
      "id": "did:3:bafyreiacmttqrvqnlv5ig2zyxgwk2zyb2kmr5uymio6z2efmfmbmztowyq#signingKey",
      "publicKeyHex": "04f946a2d88587620c5f35ed454b56693f889143eb8b6a09add775323ee48eea50f975da450eb17e84bbc7789d5a5e2e81b801d518738aa2296b97085543b92162",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreiacmttqrvqnlv5ig2zyxgwk2zyb2kmr5uymio6z2efmfmbmztowyq#encryptionKey",
      "publicKeyBase64": "Pr8/CUkw2aisoqnMSJkeOggGD51YwFR0DLrvyeWvhH8=",
      "type": "Curve25519EncryptionPublicKey",
    },
    Object {
      "ethereumAddress": "0xlmnop",
      "id": "did:3:bafyreiacmttqrvqnlv5ig2zyxgwk2zyb2kmr5uymio6z2efmfmbmztowyq#managementKey",
      "type": "Secp256k1VerificationKey2018",
    },
  ],
}
`;
